assets/css/song-list.css
.song-list {
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background-color: #ead0d1;
  border-radius: 5px;
  transition: 0.35s;
  transform: translateX(100%);
  z-index: 1000;
}

.song-list-active {
  transform: translateX(0%);
}

.song-list-toggle i {
  position: absolute;
  top: -10px;
  right: -5px;
  font-size: 24px;
  cursor: pointer;
  z-index: 2000;
}

.each-song:first-child {
  margin-top: 50px;
  border-top: solid 1px #656565;
}

.each-song {
  position: relative;
  padding: 15px;
  border-bottom: solid 1px #656565;
  transition: 0.25s;
}

.each-song-name {
  font-size: 24px;
  font-weight: 550;
  color: #656565;
}

.each-song-singer {
  font-weight: 550;
  color: #656565;
  opacity: 0.8;
}

.each-song-play {
  position: absolute;
  top: 10px;
  right: 0;
  cursor: pointer;
}

